objects/Report_User__c.object
<CustomObject>
    <description>To link to Job for OLB report users</description>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job__c</fullName>
        <label>Job</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Supervisor and Feedback Providers</relationshipLabel>
        <relationshipName>Report_Users</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Type__c</fullName>
        <description>This field represents the type of Report User</description>
        <inlineHelpText>Select the type of Report User</inlineHelpText>
        <label>User Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Supervisor</fullName>
                </value>
                <value>
                    <fullName>Feedback Provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <description>This field represents the Username of the feedback provider on SODA.</description>
        <inlineHelpText>This field represents the Username of the feedback provider on SODA.</inlineHelpText>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Report User</label>
    <nameField>
        <displayFormat>R{00000}</displayFormat>
        <label>Report User</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Report Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>